syntax = "proto3";

option csharp_namespace = "GrpcServer";

service Customer {
	rpc GetCustoemrInfo(CustomerLookupModel) returns (customerModel);
	rpc GetCustoemrInfoStream(CustomerTestModel) returns (stream customerModel);

}

message CustomerTestModel{

}

message CustomerLookupModel {
	int32 userId = 1;
}


message customerModel {
	string firstName =1;
	string lastName =2;
	string emailAddress=3;
	string isAlive=4;
	int32 age=5;
}
